Add slider thumbs

--- a/dev/html/index.html
+++ b/dev/html/index.html
@@ -29,15 +29,80 @@
         </div>
     </div>
 </div>
-<div class="container slider slider_flex">
-    <div class="slider__slide slider__slide_active">
+<div class="container slider slider_fade">
+    <div class="slider__slide">
         <img src="img/slide_1.png" alt="slide" class="slider__img">
+        <div class="slider__info">
+            <h class="slider__header">slide one</h>
+            <p class="slider__text">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium aliquid aspernatur exercitationem facilis numquam tenetur voluptas? Ab commodi eius enim.
+            </p>
+        </div>
     </div>
     <div class="slider__slide">
         <img src="img/slide_2.png" alt="slide" class="slider__img">
+        <div class="slider__info">
+            <h class="slider__header">slide two</h>
+            <p class="slider__text">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium aliquid aspernatur exercitationem facilis numquam tenetur voluptas? Ab commodi eius enim.
+            </p>
+        </div>
     </div>
     <div class="slider__slide">
         <img src="img/slide_3.png" alt="slide" class="slider__img">
+        <div class="slider__info">
+            <h class="slider__header">slide three</h>
+            <p class="slider__text">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium aliquid aspernatur exercitationem facilis numquam tenetur voluptas? Ab commodi eius enim.
+            </p>
+        </div>
+    </div>
+    <div class="slider__slide slider__slide_active">
+        <img src="img/slide_1.png" alt="slide" class="slider__img">
+        <div class="slider__info">
+            <h class="slider__header">slide four</h>
+            <p class="slider__text">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium aliquid aspernatur exercitationem facilis numquam tenetur voluptas? Ab commodi eius enim.
+            </p>
+        </div>
+    </div>
+    <div class="slider__slide">
+        <img src="img/slide_2.png" alt="slide" class="slider__img">
+        <div class="slider__info">
+            <h class="slider__header">slide five</h>
+            <p class="slider__text">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium aliquid aspernatur exercitationem facilis numquam tenetur voluptas? Ab commodi eius enim.
+            </p>
+        </div>
+    </div>
+    <div class="slider__slide">
+        <img src="img/slide_3.png" alt="slide" class="slider__img">
+        <div class="slider__info">
+            <h class="slider__header">slide six</h>
+            <p class="slider__text">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium aliquid aspernatur exercitationem facilis numquam tenetur voluptas? Ab commodi eius enim.
+            </p>
+        </div>
+    </div>
+    <div class="slider__thrumb-panel">
+        <div class="slider__thrumb">
+            <img src="img/slide_thrumb_1.png" alt="slide" class="slider__thrumb-img">
+        </div>
+        <div class="slider__thrumb">
+            <img src="img/slide_thrumb_2.png" alt="slide" class="slider__thrumb-img">
+        </div>
+        <div class="slider__thrumb">
+            <img src="img/slide_thrumb_3.png" alt="slide" class="slider__thrumb-img">
+        </div>
+        <div class="slider__thrumb">
+            <img src="img/slide_thrumb_1.png" alt="slide" class="slider__thrumb-img">
+        </div>
+        <div class="slider__thrumb">
+            <img src="img/slide_thrumb_2.png" alt="slide" class="slider__thrumb-img">
+        </div>
+        <div class="slider__thrumb">
+            <img src="img/slide_thrumb_3.png" alt="slide" class="slider__thrumb-img">
+        </div>
     </div>
     <div class="slider__btn slider__btn_left">
         <i class="icon-left-open"></i>
@@ -45,6 +110,8 @@
     <div class="slider__btn slider__btn_right">
         <i class="icon-right-open"></i>
     </div>
+    <div class="slider__sidepane slider__sidepane_left"></div>
+    <div class="slider__sidepane slider__sidepane_right"></div>
 </div>
 <script src="js/index.js"></script>
 </body>
