--- a/dev/html/index.html
+++ b/dev/html/index.html
@@ -12,24 +12,30 @@
         <span class="logo__first">jet</span><span class="logo__last">ro</span>
     </div>
     <div class="navbar">
-        <div class="navbar__item navbar__item">
-            <a class="navbar__link navbar__link_active" href="#">home</a>
+        <div class="navbar__btn">
+            <i class="icon-menu"></i>
         </div>
-        <div class="navbar__item">
-            <a class="navbar__link" href="#">about us</a>
-        </div>
-        <div class="navbar__item">
-            <a class="navbar__link" href="#">blog</a>
-        </div>
-        <div class="navbar__item">
-            <a class="navbar__link" href="#">portfolio</a>
-        </div>
-        <div class="navbar__item">
-            <a class="navbar__link" href="#">contact us</a>
+        <div class="navbar__list">
+            <div class="navbar__item">
+                <a class="navbar__link navbar__link_active" href="#">home</a>
+            </div>
+            <div class="navbar__item">
+                <a class="navbar__link" href="#">about us</a>
+            </div>
+            <div class="navbar__item">
+                <a class="navbar__link" href="#">blog</a>
+            </div>
+            <div class="navbar__item">
+                <a class="navbar__link" href="#">portfolio</a>
+            </div>
+            <div class="navbar__item">
+                <a class="navbar__link" href="#">contact us</a>
+            </div>
         </div>
     </div>
 </div>
-<div class="container slider slider_fade">
+<div class="sidepane"></div>
+<div class="container slider">
     <div class="slider__slide">
         <img src="img/slide_1.png" alt="slide" class="slider__img">
         <div class="slider__info">
@@ -57,8 +63,8 @@
             </p>
         </div>
     </div>
-    <div class="slider__slide slider__slide_active">
-        <img src="img/slide_1.png" alt="slide" class="slider__img">
+    <div class="slider__slide">
+        <img src="img/slide_4.png" alt="slide" class="slider__img">
         <div class="slider__info">
             <h class="slider__header">slide four</h>
             <p class="slider__text">
@@ -67,7 +73,7 @@
         </div>
     </div>
     <div class="slider__slide">
-        <img src="img/slide_2.png" alt="slide" class="slider__img">
+        <img src="img/slide_5.png" alt="slide" class="slider__img">
         <div class="slider__info">
             <h class="slider__header">slide five</h>
             <p class="slider__text">
@@ -76,32 +82,12 @@
         </div>
     </div>
     <div class="slider__slide">
-        <img src="img/slide_3.png" alt="slide" class="slider__img">
+        <img src="img/slide_6.png" alt="slide" class="slider__img">
         <div class="slider__info">
             <h class="slider__header">slide six</h>
             <p class="slider__text">
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium aliquid aspernatur exercitationem facilis numquam tenetur voluptas? Ab commodi eius enim.
             </p>
-        </div>
-    </div>
-    <div class="slider__thrumb-panel">
-        <div class="slider__thrumb">
-            <img src="img/slide_thrumb_1.png" alt="slide" class="slider__thrumb-img">
-        </div>
-        <div class="slider__thrumb">
-            <img src="img/slide_thrumb_2.png" alt="slide" class="slider__thrumb-img">
-        </div>
-        <div class="slider__thrumb">
-            <img src="img/slide_thrumb_3.png" alt="slide" class="slider__thrumb-img">
-        </div>
-        <div class="slider__thrumb">
-            <img src="img/slide_thrumb_1.png" alt="slide" class="slider__thrumb-img">
-        </div>
-        <div class="slider__thrumb">
-            <img src="img/slide_thrumb_2.png" alt="slide" class="slider__thrumb-img">
-        </div>
-        <div class="slider__thrumb">
-            <img src="img/slide_thrumb_3.png" alt="slide" class="slider__thrumb-img">
         </div>
     </div>
     <div class="slider__btn slider__btn_left">
@@ -110,8 +96,26 @@
     <div class="slider__btn slider__btn_right">
         <i class="icon-right-open"></i>
     </div>
-    <div class="slider__sidepane slider__sidepane_left"></div>
-    <div class="slider__sidepane slider__sidepane_right"></div>
+</div>
+<div class="container thumbs">
+    <div class="thumbs__thumb">
+        <img src="img/slide_thumb_1.png" alt="slide" class="thumbs__img">
+    </div>
+    <div class="thumbs__thumb">
+        <img src="img/slide_thumb_2.png" alt="slide" class="thumbs__img">
+    </div>
+    <div class="thumbs__thumb">
+        <img src="img/slide_thumb_3.png" alt="slide" class="thumbs__img">
+    </div>
+    <div class="thumbs__thumb">
+        <img src="img/slide_thumb_4.png" alt="slide" class="thumbs__img">
+    </div>
+    <div class="thumbs__thumb">
+        <img src="img/slide_thumb_5.png" alt="slide" class="thumbs__img">
+    </div>
+    <div class="thumbs__thumb">
+        <img src="img/slide_thumb_6.png" alt="slide" class="thumbs__img">
+    </div>
 </div>
 <script src="js/index.js"></script>
 </body>
