--- a/dev/html/index.html
+++ b/dev/html/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name = "viewport" content = "width=device-width, initial-scale=1">
     <title>Title</title>
+    <script src="js/index.js"></script>
     <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
@@ -36,7 +37,7 @@
 </div>
 <div class="sidepane"></div>
 <div class="container slider">
-    <div class="slider__slide">
+    <div class="slider__slide slider__slide_active">
         <img src="img/slide_1.png" alt="slide" class="slider__img">
         <div class="slider__info">
             <h class="slider__header">slide one</h>
@@ -117,6 +118,5 @@
         <img src="img/slide_thumb_6.png" alt="slide" class="thumbs__img">
     </div>
 </div>
-<script src="js/index.js"></script>
 </body>
 </html>
