--- a/dev/html/index.html
+++ b/dev/html/index.html
@@ -118,5 +118,8 @@
         <img src="img/slide_thumb_6.png" alt="slide" class="thumbs__img">
     </div>
 </div>
+<div class="container">
+
+</div>
 </body>
 </html>
