started new pages

--- a/dev/html/about.html
+++ b/dev/html/about.html
@@ -3,24 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name = "viewport" content = "width=device-width, initial-scale=1">
-    <title>Jetro - Home</title>
+    <title>Jetro - About us</title>
     <script src="js/index.js"></script>
     <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
 <div class="page-wrapper">
-   <div class="content">
+    <div class="content">
         //= ../blocks/navbar/navbar.html
         <div class="sidepane-wrapper">
             <div class="sidepane sidepane_top"></div>
             <div class="container sidepane-border">
-                //= ../blocks/slider/slider.html
+
             </div>
         </div>
-        //= ../blocks/thumbs/thumbs.html
-        //= ../blocks/article-preview/article-preview.html
-        //= ../blocks/h-line/h-line.html
-        //= ../blocks/recent/recent.html
+
     </div>
     //= ../blocks/footer/footer.html
 </body>
