upd #1 new-pages

--- a/dev/html/about.html
+++ b/dev/html/about.html
@@ -11,13 +11,7 @@
 <div class="page-wrapper">
     <div class="content">
         //= ../blocks/navbar/navbar.html
-        <div class="sidepane-wrapper">
-            <div class="sidepane sidepane_top"></div>
-            <div class="container sidepane-border">
-
-            </div>
-        </div>
-
+        //= ../blocks/title/title.html
     </div>
     //= ../blocks/footer/footer.html
 </body>
